--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<script src="main.js"></script>
 </head>
 <body>
-	<textarea id="text" readonly></textarea>
+	<textarea id="text" class="dark" readonly></textarea>
 	<div id="options">
-		<div><a href="https://github.com/505e06b2/Image-to-Braille" target="_blank">Open Repo</a></div>
+		<div><a href="https://github.com/zurrty/Image-to-Braille" target="_blank">Open Repo</a></div>
 		<div><input id="file" type="file" accept="image/*"></div>
 
-		<div title="Toggle dark theme"><input type="checkbox" id="darktheme"> Dark Theme</div>
+		<div title="Toggle dark theme"><input type="checkbox" id="darktheme" checked> Dark Theme</div>
 		<div title="Invert black with white"><input type="checkbox" id="inverted"> Invert</div>
 		<div title="Monochrome dithering"><input type="checkbox" id="dithering"> Dithering</div>
 		<div title="Disable placeholder spacing"><input type="checkbox" id="monospace"> Monospace</div>
@@ -32,9 +32,14 @@
 		</div>
 		<div>
 			<button id="clipboard">Copy to clipboard</button>
+			<span id="clipboard-notify"></span>
 		</div>
 		<div>
 			Character Count: <span id="charcount">0</span>
+		</div>
+
+		<div>
+			<b>TIP:</b> You can paste, as well as drag and drop images to upload them.
 		</div>
 	</div>
 </body>
